--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,14 @@
+NODE_ENV=development
 PORT=8000
+APP_URL=http://localhost:8000
+
+
+DB=mysql
+DB_HOST=localhost
+DB_PORT=9906
+DB_USER=root
+DB_PASSWORD=123456
+DB_NAME=laplace
+
+
+
