--- a/server/.env.example
+++ b/server/.env.example
@@ -5,10 +5,7 @@ APP_URL=http://localhost:8000
 
 DB=mysql
 DB_HOST=localhost
-DB_PORT=9906
+DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=123456
-DB_NAME=laplace
-
-
-
+DB_PASSWORD=
+DB_NAME=Laplace
