--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.21"
   },
   "devDependencies": {
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "nprogress": "^0.2.0",
     "vite": "^7.1.7"
   }
 }
