--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,13 @@
 {
   "name": "laplace-server",
   "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
+  "main": "src/server.js",
   "license": "MIT",
   "dependencies": {
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -17,14 +16,27 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "babel-loader": "^10.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "concurrently": "^9.2.1",
     "eslint": "^9.36.0",
     "http-status-codes": "^2.3.0",
     "nodemon": "^3.1.10",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "webpack": "^5.102.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development",
+    "start": "node dist/main.js",
+    "dev": "concurrently \"yarn:watch:build\" \"yarn:watch:server\"",
+    "watch:build": "webpack --watch --mode development",
+    "watch:server": "nodemon --watch dist dist/main.js",
     "lint": "eslint . --ext .js"
   },
   "browserslist": {
