--- a/server/babel.config.json
+++ b/server/babel.config.json
@@ -1,15 +1,5 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "node": "current"
-        },
-        "modules": false
-      }
-    ]
-  ],
+  "presets": ["@babel/preset-env"],
   "plugins": [
     [
       "module-resolver",
