--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,16 @@
   "devDependencies": {
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.5",
+    "@babel/node": "^7.28.0",
     "@babel/preset-env": "^7.28.5",
     "babel-loader": "^10.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-register": "^6.26.0",
     "concurrently": "^9.2.1",
     "eslint": "^9.36.0",
     "http-status-codes": "^2.3.0",
     "nodemon": "^3.1.10",
+    "sequelize-cli": "^6.6.3",
     "slugify": "^1.6.6",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
@@ -34,7 +37,7 @@
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "start": "node dist/main.js",
-    "dev": "concurrently \"yarn:watch:build\" \"yarn:watch:server\"",
+    "dev": "nodemon --exec babel-node src/server.js",
     "watch:build": "webpack --watch --mode development",
     "watch:server": "nodemon --watch dist dist/main.js",
     "lint": "eslint . --ext .js"
