--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,20 @@
   "main": "src/server.js",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.1",
-    "sequelize": "^6.37.7"
+    "nodemailer": "^7.0.10",
+    "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
