--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "src/server.js",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
