--- a/server/.env.example
+++ b/server/.env.example
@@ -6,6 +6,6 @@ APP_URL=http://localhost:8000
 DB=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=root
+DB_USERNAME=root
 DB_PASSWORD=
 DB_NAME=Laplace
