--- a/client/package.json
+++ b/client/package.json
@@ -6,19 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.13",
-    "axios": "^1.12.2",
-    "dotenv": "^17.2.3",
-    "tailwindcss": "^4.1.13",
-    "vue": "^3.5.21"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@fortawesome/free-solid-svg-icons": "^7.1.0",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "nprogress": "^0.2.0",
-    "vite": "^7.1.7"
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "babel-plugin-react-compiler": "^1.0.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "vite": "^7.2.4"
   }
 }
